Fix issue breaking wrapped generation

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -284,7 +284,6 @@
     left: 4px;
     right: 4px;
     bottom: 4px;
-    border: 2px dashed rgba(255, 255, 255, 0.2);
     pointer-events: none;
   }
 
